# lido-pro

./: .env.example  .gitignore  AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  SETUP.md  TRADEMARK.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
asset-lab/: README.md
asset-lab/manifests/: generated-assets.json
asset-lab/scripts/: check_blender.sh  generate_assets.py  render_all.py  render_fallback.py
docs/: README.md  map-r4-canvas-construction-kit-settings-ui.md
docs/architecture/: account-payment-model.md  articoli-naming-map.md  booking-availability-engine.md  booking-customer-pairing.md  booking-domain-contract.md  booking-folio-engine.md  booking-inbox.md  booking-pricing-snapshot.md  booking-registro-events.md  booking-reservation-lifecycle.md  booking-schema-map.md  bottom-operational-panel-model.md  client-first-booking-flow.md  customer-assignment-model.md  extra-items-account-model.md  metric-layout-model.md  mobile-local-first.md  operator-booking-flow.md  product-spine.md  reservation-period-model.md  spiaggia-active-layout-boundary.md  tariff-catalog-model.md
scripts/: cap-android-dev.sh  cap-open-android.sh  check-node-version.mjs  repo-scan.sh  tauri-dev.sh
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: main.rs
src/lib/db/: seed.ts  (+14 more)
(+463 files in other folders)
