[package]
name = "lidopro"
version = "0.1.0"
description = "LidoPro Desktop"
authors = ["Francesco Maiomascio"]
license = "UNLICENSED"
repository = "https://github.com/francescomaiomascio/lido-pro"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lidopro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
